--- a/aula2/package.json
+++ b/aula2/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.10.0",
     "@tailwindcss/vite": "^4.1.8",
     "next": "^15.3.3",
     "react": "^19.0.0",
@@ -23,6 +24,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.4",
+    "prisma": "^6.10.0",
     "tailwindcss": "^4.1.8",
     "typescript": "^5.8.3"
   }
